bk_ida/gccida/g1/eh_data_format_name
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/eh_data_format_name/src/dwarf2asm.c:812:49: error: use of undeclared identifier 'format_names_3'
if ( ( unsigned int)format > 0xFF || ( result = format_names_3[format]) == 0LL ) 
                                                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/eh_data_format_name/src/obj/dwarf2asm.o] Error 1
